# soil_sample_client

./: CMakeLists.txt
doc/MSP-EXP430FR4133_Hardware_Design_Files/: Readme.txt
src/: backchannel_uart.c  backchannel_uart.cpp  backchannel_uart.h  blink.cpp  main.c  node_control.c  node_control.h  radio_nrf24l01p.c  radio_nrf24l01p.h  ring_buffer.c  ring_buffer.h  rtc.c  rtc.h  soil_sensor.c  soil_sensor.h  typedefs.h  util.h
